--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,6 +18,13 @@
     "is_HEX": "Значение должно являться hex цветом",
     "email_doesnt_exist": "Почта не существует"
   },
+  "header_menu": {
+    "reviews": "Мои отзывы",
+    "personal_cabinet": "Личный кабинет",
+    "chats": "Мои сообщения",
+    "logout": "Выйти",
+    "login": "Войти"
+  },
   "loading": "Загрузка...",
   "banned": "Вы были забанены администратором",
   "user": {
